Added arguments for parallelism

--- a/mult3/Makefile
+++ b/mult3/Makefile
@@ -2,7 +2,7 @@ SIM ?= verilator
 TOPLEVEL_LANG ?= verilog
 VERILOG_SOURCES += $(PWD)/mult3.v
 VERILOG_SOURCES += $(PWD)/mult3_test.v
-EXTRA_ARGS += --trace --trace-fst --trace-structs -j -Wno-MODDUP -Wno-IMPLICIT
+EXTRA_ARGS += --trace --trace-fst --trace-structs -j 0 -Wno-MODDUP -Wno-IMPLICIT
 mult3_test:
 	rm -rf sim_build
 	rm -rf *.vcd
