--- a/or_gate/Makefile
+++ b/or_gate/Makefile
@@ -2,7 +2,7 @@ SIM ?= verilator
 TOPLEVEL_LANG ?= verilog
 VERILOG_SOURCES += $(PWD)/or_gate.v
 VERILOG_SOURCES += $(PWD)/or_test.v
-EXTRA_ARGS += --trace --trace-fst --trace-structs -j
+EXTRA_ARGS += --trace --trace-fst --trace-structs -j 0
 or:
 	rm -rf sim_build
 	rm -rf *.vcd
